Fix navicon X jumping on open/close

--- a/src/assets/stylesheets/_navicons.scss
+++ b/src/assets/stylesheets/_navicons.scss
@@ -94,4 +94,9 @@
     &::before { transform: rotate(-45deg); }
     &::after { transform: rotate(45deg); }
   }
+
+  .navicon::before,
+  .navicon::after {
+    left: 0;
+  }
 }
